@@ -67,8 +67,8 @@
       <id>451</id>
       <posx>10</posx>
       <posy>70</posy>
-      <width>474</width>
-      <height>390</height>
+      <width>400</width>
+      <height>323</height>
       <onleft>413</onleft>
       <onright>413</onright>
       <onup>413</onup>
