@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 04-05-2006 changed: Cleaned up the IMDb thumb code a little.  GetThumb from the Movie Information page now allows users to select between the IMDb thumb and their local thumbs.
  - 04-05-2006 fixed: Aspect ratio of images in python were defaulted to keep, rather than stretch.
  - 04-05-2006 added: Direct3d Setviewport export for dlls.
  - 04-05-2006 changed: Thumbs in My Videos are set via a background loader.
